# ned-map-project

./: index.html  voice_server.cpp
PROJECT/: CMakeLists.txt  ENHANCED_README.md  FRONTENDDD.html  README.md  VOICE_README.md  build.bat  build.sh  build_enhanced.bat  build_voice.bat  compile.bat  enhanced_CMakeLists.txt  enhanced_main.cpp  enhanced_navigator.html  export.geojson  final_main.cpp  gps_interface.html  httplib.h  index.html  main.cpp  main.cpp.cpp  pro.cpp  quick_compile.bat  run.bat  simple.cpp  simple_gps.html  simple_server.h  standalone.html  start.bat  tempCodeRunnerFile.cpp  test_log.txt  test_server.bat  voice_main.cpp  web_server.py
